--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ nav {
     width: 100vw;
     height: 50px;
     background-color: #6F9469;
+    border: 3px;
+    border-style: solid;
+    border-radius: 50px;
 }
 
 .ul-nav {
@@ -33,6 +36,10 @@ li {
     display: inline-block;
 }
 
+section{
+    width: 100vw;
+}
+
 h1 {
     margin: 50px auto 50px auto;
     width: 500px;
@@ -45,10 +52,20 @@ section p {
     width: 800px;
     text-align: center;
 }
-img {
+.img1 {
     border:3px;
     border-style:solid;
-    border-color:white;
+    border-color:rgb(173, 10, 10);
     border-radius:20px;
+    margin: 0 auto 50px auto;
+    display: block;
 }
 
+.saibamais{
+    margin: 0 auto 50px auto;
+    text-align: center;
+    width:100px;
+    display: block;
+}
+
+.do
